objects/CloudingoAgent__SearchFilter__c.object
<CustomObject>
    <fields>
        <fullName>CloudingoAgent__Content__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__EXID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EXID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SearchFilter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SearchFilters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>